# Silly-Words

./: .gitignore  pyproject.toml
data/: test_corpus.csv
notebooks/: Proofs of concept.ipynb  __init__.py
sillywords/charts/: __init__.py  dist_plot.py
sillywords/text/: __init__.py
tests/: test_sillywords.py
