[tool.poetry]
name = "SillyWords"
version = "0.1.0"
description = ""
authors = ["Felipe Oliveira <fp.ramos.oliveira@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
